tests/neg-custom-args/captures/existential-mapping.check
-- Error: tests/neg-custom-args/captures/existential-mapping.scala:44:13 -----------------------------------------------
44 |  val z1: A^ => Array[C^] = ??? // error
   |          ^^^^^^^^^^^^^^^
   |          Array[box C^] captures the root capability `cap` in invariant position
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:9:25 ---------------------------
9 |  val _:  (x: C^) -> C = x1 // error
  |                         ^^
  |                         Found:    (x1 : (x: C^) -> (ex$3: scala.caps.Exists) -> C^{ex$3})
  |                         Required: (x: C^) -> C
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:12:20 --------------------------
12 |  val _:  C^ -> C = x2 // error
   |                    ^^
   |                    Found:    (x2 : C^ -> (ex$7: scala.caps.Exists) -> C^{ex$7})
   |                    Required: C^ -> C
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:15:30 --------------------------
15 |  val _: A^ -> (x: C^) -> C = x3 // error
   |                              ^^
   |                              Found:    (x3 : A^ -> (x: C^) -> (ex$11: scala.caps.Exists) -> C^{ex$11})
   |                              Required: A^ -> (x: C^) -> C
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:18:25 --------------------------
18 |  val _: A^ -> C^ -> C = x4 // error
   |                         ^^
   |                         Found:    (x4 : A^ -> C^ -> (ex$19: scala.caps.Exists) -> C^{ex$19})
   |                         Required: A^ -> C^ -> C
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:21:30 --------------------------
21 |  val _: A^ -> (x: C^) -> C = x5 // error
   |                              ^^
   |                              Found:    (x5 : A^ -> (x: C^) -> (ex$27: scala.caps.Exists) -> C^{ex$27})
   |                              Required: A^ -> (x: C^) -> C
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:24:30 --------------------------
24 |  val _: A^ -> (x: C^) => C = x6 // error
   |                              ^^
   |  Found:    (x6 : A^ -> (ex$36: scala.caps.Exists) -> (x: C^) ->{ex$36} (ex$35: scala.caps.Exists) -> C^{ex$35})
   |  Required: A^ -> (ex$39: scala.caps.Exists) -> (x: C^) ->{ex$39} C
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:27:25 --------------------------
27 |  val _:  (x: C^) => C = y1 // error
   |                         ^^
   |                         Found:    (y1 : (x: C^) => (ex$41: scala.caps.Exists) -> C^{ex$41})
   |                         Required: (x: C^) => C
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:30:20 --------------------------
30 |  val _:  C^ => C = y2 // error
   |                    ^^
   |                    Found:    (y2 : C^ => (ex$45: scala.caps.Exists) -> C^{ex$45})
   |                    Required: C^ => C
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:33:30 --------------------------
33 |  val _: A^ => (x: C^) => C = y3 // error
   |                              ^^
   |  Found:    (y3 : A^ => (ex$50: scala.caps.Exists) -> (x: C^) ->{ex$50} (ex$49: scala.caps.Exists) -> C^{ex$49})
   |  Required: A^ => (ex$53: scala.caps.Exists) -> (x: C^) ->{ex$53} C
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:36:25 --------------------------
36 |  val _: A^ => C^ => C = y4 // error
   |                         ^^
   |       Found:    (y4 : A^ => (ex$56: scala.caps.Exists) -> C^ ->{ex$56} (ex$55: scala.caps.Exists) -> C^{ex$55})
   |       Required: A^ => (ex$59: scala.caps.Exists) -> C^ ->{ex$59} C
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:39:30 --------------------------
39 |  val _: A^ => (x: C^) -> C = y5 // error
   |                              ^^
   |                              Found:    (y5 : A^ => (x: C^) -> (ex$61: scala.caps.Exists) -> C^{ex$61})
   |                              Required: A^ => (x: C^) -> C
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/existential-mapping.scala:42:30 --------------------------
42 |  val _: A^ => (x: C^) => C = y6 // error
   |                              ^^
   |  Found:    (y6 : A^ => (ex$70: scala.caps.Exists) -> (x: C^) ->{ex$70} (ex$69: scala.caps.Exists) -> C^{ex$69})
   |  Required: A^ => (ex$73: scala.caps.Exists) -> (x: C^) ->{ex$73} C
   |
   | longer explanation available when compiling with `-explain`
